[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/HealthBarEnemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/EnemyHealtBar/HealthBar1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/EnemyHealtBar/HealthBar2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/EnemyHealtBar/HealthBar3.png" type="Texture" id=4]

[node name="HealthBarEnemy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 50.0
allow_greater = true
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="UpdateTween" type="Tween" parent="."]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
